--- a/lottery_web/home.html
+++ b/lottery_web/home.html
@@ -46,8 +46,11 @@
             </div>
         </div>
         <br><br><br>
-        <div class="col-md-4 col-md-offset-4">
-        		<p> &nbsp &nbsp &nbsp &copy; 2018  All Rights Reserved |Hisham Department of ECE | CET </p>
-        	</div>
+        
+
+
+    <footer id="footer">
+      <p> &nbsp &nbsp &nbsp &copy; 2018  All Rights Reserved |Hisham Department of ECE | CET </p>
+    </footer>
   </body>
 </html>
